Refactoring: Hexagonal architecture instead of layering. Additional adaptation for managing project structures and storing transitively reachable objects.